2008-04-15  James Tanis  <jtt@stockade.tanis.org>

	* lib/b_url.c (bk_url_parse_authority): Change bk_url_authority to
	look like other libbk structs.

2008-04-09  James Tanis  <jtt@localhost.localdomain>

	* ssl/b_ssl.c: Avoid a dangling reference by withdrawing the iofun
	from the ioh structure before freeing the ssl state structure.

2007-12-10  James Tanis  <jtt@stockade.tanis.org>

	* lib/b_debug.c (bk_debug_istream): Function to return the
	debugging stream

2007-12-04  James Tanis  <jtt@stockade.tanis.org>

	* lib/b_memx.c (bk_memx_append): Convert function to use count
	instead of len, so as to match the rest of the memx API.
	(bk_memx_info): Function export all values in a bk_memx.
	(bk_memx_get): Allow memx to actually allocate extra elements
	past the initial hint.

	* bk_memx_size: constant which allows outsiders to know the size
	of a bk_memx structure.

2007-09-13  James Tanis  <jtt@outpost.tanis.org>

	* lib/b_getbyfoo.c (bk_ether_aton): Convert a string ethernet
	address to struct ether.
	(bk_ether_ntoa): Convert a struct ether to a ethernet address
	string. 

 2007-06-19  James Tanis  <jtt@outpost.tanis.org>
	
	* lib/b_ringdir.c (bk_ringdir_get_status): Work aroundf fencepost
	error. May need to be reworked later.

2007-05-02  Alexander Dupuy  <alex.dupuy@counterstorm.com>

	* lib/b_ringdir.c (bk_ringdir_get_status): #9000: handle rings starting
	at 1 instead of 0

2007-04-09  Alexander Dupuy  <alex.dupuy@counterstorm.com>

	* lib/b_shmipc.c: acknolwedged

2007-02-21  James Tanis  <jtt@counterstorm.com>

	* test/entropy/Makefile, lib/Makefile: $(BK_LIBM) is now obsolete

	* Makefile, include/Makefile: All user to selectively *not* compile in
	several baka features

2007-01-15  Seth Robertson  <seth@counterstorm.com>

	* test/test_threads.c: reversed test

2007-01-12  Brian Lindauer  <lindauer@counterstorm.com>

	* test/test_threads.c: #8756: Save someone a rollup headache.

2007-01-11  James Tanis  <jtt@counterstorm.com>
